[tool.poetry]
name = "data-platform-helpers"
version = "0.1.4"
description = ""
authors = ["Mia Altieri <mgaltier200@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
ops = ">=2.4.0"
pytest_operator = { version = "0.36.0", optional = true }

[tool.poetry.extras]
tests = ["pytest_operator"]

all = ["pytest_operator"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.format]
optional = true

[tool.poetry.group.format.dependencies]
ruff = ">=0.6.8"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
codespell = ">=2.2.2"
pyright = ">=1.1.385"

[tool.pyright]
include = ["data_platform_helpers"]
extraPaths = ["tests"]
pythonVersion = "3.8"
pythonPlatform = "All"
typeCheckingMode = "basic"
reportMissingModuleSource = true
