[tool.poetry]
name = "data-platform-helpers"
version = "0.1.5"
description = ""
authors = ["Mia Altieri <mgaltier200@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ops = ">=2.15.0"
pydantic = ">=2.0"
rich = "*"
pytest_operator = { version = "0.36.0", optional = true }

[tool.poetry.extras]
tests = ["pytest_operator"]

all = ["pytest_operator"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.unit]
optional = true

[tool.poetry.group.unit.dependencies]
ops = { version = ">=2.16.0", extras=["testing"]}
coverage = {extras = ["toml"], version = "^7.5.0"}
pytest = "^8.1.1"
pytest-mock = "*"

[tool.poetry.group.format]
optional = true

[tool.poetry.group.format.dependencies]
ruff = "^0.7.2"
pydantic = ">=2.0"
mypy = "*"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
codespell = ">=2.2.2"
pyright = ">=1.1.385"
ruff = "^0.7.2"
pydantic = ">=2.0"
mypy = "*"

[tool.coverage.run]
omit = [
    "data_platform_helpers/advanced_statuses/protocol.py"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [".git", "__pycache__", ".tox", "build", "dist", "*.egg_info", "venv", "tests/unit/"]

[tool.ruff.lint]
select = ["F", "E", "W", "C", "N", "R", "D", "I001", "UP"]
# Ignore W503, E501 because using black creates errors with this
# Ignore D107 Missing docstring in __init__
ignore = ["E501", "D107", "D417"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
# TODO: Fix those linting errors and clean this section.
"data_platform_helpers/__init__.py" = ["D104"]
"data_platform_helpers/tests_helpers/__init__.py" = ["D104"]
"data_platform_helpers/tests_helpers/k8s/ha_helpers.py" = ["D100"]
"data_platform_helpers/tests_helpers/vms/ha_helpers.py" = ["D100"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 99

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-copyright]
author = "Canonical Ltd."
notice-rgx = "Copyright\\s\\d{4}([-,]\\d{4})*\\s+%(author)s"

[tool.pyright]
include = ["data_platform_helpers"]
extraPaths = ["tests"]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "basic"
reportMissingModuleSource = true

[tool.mypy]
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = [
    "./build/",
    "./dist/",
    "./site/",
    "./venv/",
    "venv/*",
    "./__pypackages__/",
    "tests/unit/*",
    ]
